egress-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "egress-pol"
spec:
  endpointSelector:
    matchLabels:
      name: pod-to-b-multi-node-clusterip
  egress:
    - toEndpoints:
      - matchLabels:
          "k8s:io.kubernetes.pod.namespace": kube-system
          "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
           - port: "53"
             protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: "echo-a.default.svc.cluster.local."
        - matchName: "echo-b.default.svc.cluster.local."
